🐛 Fix: Footer overflowing.

--- a/frontend/src/stylesheets/main.scss
+++ b/frontend/src/stylesheets/main.scss
@@ -427,7 +427,6 @@ footer {
   left: 0;
   margin-left: 16em;
   padding: 0 1em;
-  width: calc(100% - 16em);
 
   li {
     list-style: none;
